classDiagram
    direction TB

    class User {
        +uuid id
        +string email
        +string full_name
        +string phone
        +string avatar_url
        +string role
        +bool is_active
        +register(data RegisterDto) AuthTokens
        +login(email, password) AuthTokens
        +logout(token) void
        +getProfile(token) AuthUser
        +updateProfile(token, data) AuthUser
        +requestPasswordReset(email) void
        +refreshToken(refreshToken) Tokens
    }
    class Customer {
        +browseProducts(query) Product[]
        +manageCart(item) void
        +manageFavorites(productId) void
        +placeOrder(payload) Order
        +viewOrderHistory(token) Order[]
        +writeReview(dto) Review
    }
    class Reseller {
        +manageProduct(dto) Product
        +adjustStock(id, delta) void
        +managePromotion(dto) Promotion
        +manageBundle(dto) ProductBundle
        +manageOrder(id, status) Order
        +verifyPayment(paymentId) void
        +viewDashboard() DashboardData
        +viewAnalytics() AnalyticsData
    }
    class Manager {
        +manageCategory(dto) Category
        +manageBanner(dto) Banner
        +manageHomepage(dto) HomepageSection
        +manageUserAccount(id, data) User
        +managePaymentAccount(dto) PaymentAccount
    }
    class SuperAdmin {
        +createStaff(data) User
        +assignRole(userId, role) User
        +setUserActive(userId, active) void
        +viewSystemStats() SystemStats
    }

    class Category {
        +uuid id
        +string name
        +string slug
        +string route_path
        +uuid parent_id
        +int level
        +bool is_active
        +getCategoryTree() Category[]
        +getRootCategories() Category[]
        +getChildren(parentId) Category[]
        +getByRoutePath(routePath) CategoryFullData
        +createCategory(dto) Category
        +updateCategory(id, dto) Category
        +deleteCategory(id) void
    }
    class Product {
        +uuid id
        +string name
        +string slug
        +string sku
        +number price
        +number original_price
        +string brand
        +uuid category_id
        +json images
        +int stock
        +bool is_featured
        +getAllProducts(query) Product[]
        +getProductById(id) Product
        +getRelatedProducts(id) Product[]
        +getProductsByCategory(categoryId) Product[]
        +createProduct(dto) Product
        +updateProduct(id, dto) Product
        +deleteProduct(id) void
        +adjustStock(id, delta) void
    }
    class ProductVariant {
        +uuid id
        +uuid product_id
        +string sku
        +number price_override
        +int stock
        +getVariantsByProduct(productId) ProductVariant[]
        +createVariant(dto) ProductVariant
        +updateVariant(id, dto) ProductVariant
        +deleteVariant(id) void
    }
    class AttributeGroup {
        +uuid id
        +string name
        +getAllGroups() AttributeGroup[]
        +getGroupById(id) AttributeGroup
        +createGroup(dto) AttributeGroup
        +updateGroup(id, dto) AttributeGroup
        +deleteGroup(id) void
        +linkCategoryAttribute(catId, groupId) void
        +unlinkCategoryAttribute(catId, groupId) void
    }
    class AttributeOption {
        +uuid id
        +uuid group_id
        +string value
        +getOptionsByGroup(groupId) AttributeOption[]
        +createOption(dto) AttributeOption
        +updateOption(id, dto) AttributeOption
        +deleteOption(id) void
    }

    class Cart {
        +uuid user_id
        +int totalItems
        +number totalPrice
        +getCart(userId) CartSummary
        +addItem(userId, dto) CartItem[]
        +updateItem(itemId, qty) CartItem[]
        +removeItem(userId, itemId) CartItem[]
        +clearCart(userId) void
        +getItemCount(userId) int
    }
    class CartItem {
        +uuid id
        +uuid product_id
        +int quantity
        +string size
        +string color
    }

    class Favorite {
        +List~FavoriteItem~ items
        +int totalItems
        +isFavorite(id) bool
        +addFavorite(item) void
        +removeFavorite(id) void
        +toggleFavorite(item) void
        +clearFavorites() void
    }
    class FavoriteItem {
        +uuid product_id
        +string name
        +string brand
        +string image
        +number price
    }

    class Order {
        +uuid id
        +uuid user_id
        +string status
        +number total
        +createOrder(payload, token) Order
        +getOrderHistory(token, page, limit) Order[]
        +getOrderDetail(token, id) Order
        +updateStatus(id, status) Order
        +calculateTotal() number
    }
    class OrderItem {
        +uuid id
        +uuid order_id
        +uuid product_id
        +uuid variant_id
        +int quantity
        +number price
        +getSubtotal() number
    }
    class Payment {
        +uuid id
        +uuid order_id
        +string method
        +number amount
        +number ref_amount
        +string status
        +createPayment(orderId, amount) Payment
        +generateQR(payment) string
        +checkStatus(paymentId) Payment
        +confirm(paymentId) void
    }
    class PaymentAccount {
        +uuid id
        +string bank
        +string account_no
        +string promptpay_number
        +bool is_active
        +getAccounts() PaymentAccount[]
        +createAccount(dto) PaymentAccount
        +updateAccount(id, dto) PaymentAccount
        +deleteAccount(id) void
    }
    class Address {
        +uuid id
        +uuid user_id
        +string province
        +string amphoe
        +string postal_code
        +bool is_default
        +getAddresses(token) Address[]
        +createAddress(token, data) Address
        +updateAddress(token, id, data) Address
        +deleteAddress(token, id) void
        +setDefault(id) void
    }
    class Review {
        +uuid id
        +uuid user_id
        +uuid product_id
        +int rating
        +string title
        +string comment
        +bool is_verified
        +getReviewsByProduct(productId, page, limit) Review[]
        +createReview(userId, dto) Review
        +updateReview(userId, id, dto) Review
        +deleteReview(userId, id) void
    }

    class Banner {
        +uuid id
        +string type
        +string title
        +string image
        +int sort_order
        +getBanners(type) Banner[]
        +createBanner(dto) Banner
        +updateBanner(id, dto) Banner
        +deleteBanner(id) void
    }
    class Promotion {
        +uuid id
        +string name
        +string type
        +number value
        +datetime start_at
        +datetime end_at
        +getActiveDeals() Promotion[]
        +getBySlug(slug) Promotion
        +create(dto) Promotion
        +update(id, dto) Promotion
        +delete(id) void
        +addProduct(promoId, productId) void
        +removeProduct(promoId, productId) void
    }
    class ProductBundle {
        +uuid id
        +string name
        +number bundle_price
        +getActiveBundles() ProductBundle[]
        +getBundlesForProduct(productId) ProductBundle[]
        +create(dto) ProductBundle
        +update(id, dto) ProductBundle
        +remove(id) void
        +addItem(bundleId, productId) void
        +removeItem(bundleId, productId) void
    }
    class HomepageSection {
        +uuid id
        +string title
        +string type
        +uuid category_id
        +int sort_order
        +getSections() HomepageSection[]
        +getConfig(key) SiteConfig
        +createSection(dto) HomepageSection
        +updateSection(id, dto) HomepageSection
        +deleteSection(id) void
        +addProductToSection(sectionId, productId) void
        +removeProductFromSection(sectionId, productId) void
    }
    class Recommendation {
        +trackView(userId, productId) void
        +getRecommendations(productId) Product[]
        +getTrending() Product[]
    }
    class Notification {
        +uuid id
        +uuid user_id
        +string type
        +string message
        +bool is_read
        +getNotifications(userId) Notification[]
        +createNotification(dto) Notification
        +markAsRead(id) void
        +remove(id) void
    }
    class Feedback {
        +uuid id
        +uuid user_id
        +int rating
        +string purpose
        +string achieved
        +string comment
        +submitFeedback(payload, token) Feedback
        +getAll(page, limit) Feedback[]
        +getSummary() FeedbackSummary
    }

    User <|-- Customer
    User <|-- Reseller
    Reseller <|-- Manager
    Manager <|-- SuperAdmin

    Customer "1" --> "*" Address
    Customer "1" --> "*" Order
    Customer "1" --> "1" Cart
    Customer "1" --> "*" Review
    Customer "1" --> "1" Favorite
    Customer "1" --> "*" Notification
    Favorite "1" --> "*" FavoriteItem

    Category "1" --> "*" Category
    Category "1" --> "*" Product
    Category "*" --> "*" AttributeGroup

    Product "1" --> "*" ProductVariant
    Product "1" --> "*" CartItem
    Product "1" --> "*" OrderItem
    Product "1" --> "*" Review
    Product "1" --> "*" FavoriteItem
    Product "*" --> "*" Promotion
    Product "*" --> "*" ProductBundle

    AttributeGroup "1" --> "*" AttributeOption
    ProductVariant "1" --> "*" OrderItem

    Cart "1" --> "*" CartItem
    Order "1" --> "*" OrderItem
    Order "1" --> "1" Payment
    Payment "*" --> "1" PaymentAccount

    HomepageSection "1" --> "*" Product
    Recommendation ..> Product : แนะนำ
